2018-02-27 Renamed Hierarichal Lesson Report property
2018-02-23 Readded works with property in Page Progress.
2018-02-22 Changed when Text has no gaps it does not require escape to deactivate in WCAG navigation
2018-02-21 Added TTS support for Reset button
2018-02-21 Added TTS plays the title of the new page
2018-02-20 Added Page mapping ids translations, Size and ModuleDimensions equals implementations
2018-02-20 Added TTS support for SHow Answers Button
2018-02-15 Added TTS support for the Text's Draggable Gap
2018-02-15 Added TTS support for Check Answers Button 
2018-02-15 Fixed issue with scaling in Figure Drawing on mobile devices
2018-02-14 Fixed issue with reseting module in Catch module
2018-02-13 Fixed issues with Glossary scaling on mobile devices
2018-02-13 Fixed problem with resolving url in inline css
2018-02-12 Fixed Catch addon double click behaviour on mobile devices, paddle is always appearing and can't run past right edge of screen. Also simulation is paused on show answers and checks answers, and it calculates max score.
2018-02-12 Deselecting Double State Button on the end of Multiaudio track connected via Audio Binder.
2018-02-09 Fixed dragging out elements from Draggable Gap.
2018-02-09 Fixed speak and playTitle commands in TTS addon
2018-02-07 Added attribute role in TrueFalse for screen reader apps.
2018-02-06 Fixed issues with scaling in Drawing
2018-02-01 Fixed issue with saving empty inlineStyles or classStyles.
2018-01-30 Added alt text for images added by RichTextEditor and for Memogame.
2018-01-30 Fixed Double State Button not activating on keyboard input.
2018-01-29 Fixed Image gap and multiplegap not getting image source alt text
2018-01-26 Fixed addon TrueFalse now only adds text as checkbox alt text
2018-01-24 Fixed addon TrueFalse not being read correctly by NVDA 
2018-01-23 Fixed url resolving for modules
2018-01-23 Fixed Choice chosen element not reseting
2018-01-23 Fixed tests in TTS and Text Identification