@@ -10,6 +10,6 @@
         <property name="index" displayName="Index File" nameLabel="IFrame_property_index_file" type="file"/>
         <property name="communicationID" displayName="Communication ID" nameLabel="IFrame_property_communication_id" type="string"/>
         <property name="allowFullscreen"  nameLabel="IFrame_property_allow_fullscreen" type="boolean"/>
-        <property name="Alt text" nameLabel="IFrame_property_alt_text" type="string" />
+        <property name="Alt text" nameLabel="IFrame_property_alt_text" type="string" isLocalized="true" />
     </model>
 </addon>
