@@ -1,3 +1,4 @@
+2018-02-27 Added localization for alt-text in some modules and layout in eKeyboard
 2018-02-27 Renamed Hierarichal Lesson Report property
 2018-02-23 Readded works with property in Page Progress.
 2018-02-22 Changed when Text has no gaps it does not require escape to deactivate in WCAG navigation
